@@ -1,5 +1,6 @@
 
 7.78  2018-05-11
+  - Deprecated delay helper in Mojolicious::Plugin::DefaultHelpers.
   - Added EXPERIMENTAL new_tag method to Mojo::DOM. (jberger, sri)
   - Added EXPERIMENTAL tag method to Mojo::DOM::HTML.
   - Added EXPERIMENTAL tag_to_html function to Mojo::DOM::HTML.
